# fd-action-policy-testing

./: .gitignore  .uncrustify.cfg  ASNETS.md  DEBUGGINGAPOLICY.md  README.md  benchmarks.py  build.py  build_configs.py  setup-asnets.sh
src/search/: CMakeLists.txt  DownwardFiles.cmake  abstract_task.cc  abstract_task.h  command_line.cc  command_line.h  evaluation_result.cc  evaluator.cc  evaluator.h  heuristic.cc  heuristic.h  operator_id.cc  operator_id.h  option_parser.h  per_state_information.h  planner.cc  policy.cc  policy.h  policy_result.cc  policy_result.h  pruning_method.h  search_algorithm.cc  search_algorithm.h  search_engine.cc  search_engine.h  search_statistics.cc  search_statistics.h  state_id.cc  state_id.h  state_registry.cc  state_registry.h  task_proxy.cc  task_proxy.h
src/search/algorithms/: segmented_vector.h
src/search/cegar/: abstraction.cc  cegar_heuristic.cc
src/search/cmake/: common_cxx_flags.cmake
src/search/ext/: tree.hh  tree_util.hh
src/search/heuristics/: lm_cut_landmarks.cc  lm_cut_landmarks.h  network_heuristic.cc  network_heuristic.h  relaxation_heuristic.cc  relaxation_heuristic.h
src/search/landmarks/: landmark_cost_assignment.cc  landmark_count_heuristic.cc  landmark_graph.cc
src/search/lp/: lp_internals.cc  lp_solver.cc
src/search/neural_networks/: abstract_network.cc  protobuf_network.cc  state_goal_network.cc  state_network.cc  state_network.h  test_torch_network.cc  test_torch_network.h  torch_network.cc  torch_policy_network.cc  torch_policy_network.h  torch_state_network.cc  torch_state_network.h
src/search/options/: errors.cc  errors.h  options.h  registries.cc  type_namer.h
src/search/parser/: abstract_syntax_tree.cc  decorated_abstract_syntax_tree.cc  lexical_analyzer.cc  syntax_analyzer.cc  token_stream.cc
src/search/pdbs/: pattern_database.cc
src/search/plugins/: raw_registry.cc  registry.cc  types.cc
src/search/policies/: heuristic_policy.cc  heuristic_policy.h  network_policy.cc  pref_ops_policy.cc  pref_ops_policy.h
src/search/policy_fuzzing/: asnet_evaluator.cc  matching_blocks_oracle.cc  novelty_store.cc  remote_policy.cc  remote_policy.h  spanner_oracle.cc
src/search/policy_fuzzing/fuzzers/: fuzzers.cc  fuzzers.h
src/search/policy_testing/: bug_store.cc  bug_store.h  bug_value.h  component.cc  component.h  cost_estimator.cc  cost_estimator.h  fuzzing_bias.cc  fuzzing_bias.h  novelty_store.cc  novelty_store.h  oracle.cc  oracle.h  out_of_resource_exception.cc  out_of_resource_exception.h  plan_file_parser.cc  plan_file_parser.h  policy.cc  policy.h  pool.cc  pool.h  pool_filter.cc  pool_filter.h  state_regions.cc  state_regions.h  testing_environment.cc  testing_environment.h  utils.cc  utils.h
src/search/policy_testing/cost_estimators/: external_planner_cost_estimator.cc  external_planner_cost_estimator.h  internal_planner_cost_estimator.cc  internal_planner_cost_estimator.h  matching_blocks_cost_estimator.cc  matching_blocks_cost_estimator.h  spanner_cost_estimator.cc  spanner_cost_estimator.h
src/search/policy_testing/engines/: asnet_benchmarking.cc  asnet_benchmarking.h  dummy_engine.cc  dummy_engine.h  pool_fuzzer.cc  pool_fuzzer.h  pool_oracle_evaluator.cc  pool_oracle_evaluator.h  pool_policy_tester.cc  pool_policy_tester.h  simplified_pool_fuzzer.cc  simplified_pool_fuzzer.h  testing_base_engine.cc  testing_base_engine.h
src/search/policy_testing/fuzzing_biases/: detour_bias.cc  detour_bias.h  dominance_bias.cc  dominance_bias.h  heuristic_bias.cc  heuristic_bias.h  internalPlannerOracle_bias.cc  internalPlannerOracle_bias.h  loopiness_bias.cc  loopiness_bias.h  plan_length_bias.cc  plan_length_bias.h  policy_heuristic_bias.cc  policy_heuristic_bias.h  slope_bias.cc  slope_bias.h  surface_bias.cc  surface_bias.h
src/search/policy_testing/metamorphic_oracles/: atomic_unrelaxation_oracle.cc  atomic_unrelaxation_oracle.h  composite_oracle.cc  composite_oracle.h  iterative_improvement_oracle.cc  iterative_improvement_oracle.h  numeric_dominance_oracle.cc  numeric_dominance_oracle.h  sequence_oracle.cc  sequence_oracle.h  unrelaxation_oracle.cc  unrelaxation_oracle.h
src/search/policy_testing/oracles/: aras_oracle.cc  aras_oracle.h  aras_wrapper.cc  aras_wrapper.h  bounded_lookahead_oracle.cc  bounded_lookahead_oracle.h  cost_estimator_based_oracle.cc  (+3 more)
src/search/sampling_engines/: plugin_sampling.cc  sampling_engine.cc  sampling_engine.h  sampling_search.cc  sampling_search.h  sampling_search_base.cc  sampling_search_base.h  sampling_search_simple.cc  sampling_search_simple.h  sampling_state_engine.cc  sampling_state_engine.h  sampling_tasks.h  sampling_v.cc  sampling_v.h
src/search/sampling_techniques/: sampling_technique.cc  technique_gbackward_none.cc  technique_gbackward_none.h  technique_iforward_none.cc  technique_iforward_none.h  technique_none_none.cc  technique_none_none.h  technique_null.cc  technique_null.h  technique_uniform_none.cc  technique_uniform_none.h
src/search/search_algorithms/: enforced_hill_climbing_search.cc  enforced_hill_climbing_search.h
src/search/search_engines/: enforced_hill_climbing_search.cc  enforced_hill_climbing_search.h  policy_walk.cc  policy_walk.h  random_search.cc  random_search.h
src/search/task_utils/: causal_graph.cc  causal_graph.h  operator_generator_factory.cc  operator_generator_factory.h  operator_generator_internals.cc  operator_generator_internals.h  predecessor_generator.cc  predecessor_generator.h  predecessor_generator_factory.cc  predecessor_generator_factory.h  regression_task_proxy.cc  regression_task_proxy.h  sampling.cc  sampling.h  successor_generator.cc  successor_generator.h  successor_generator_factory.cc  successor_generator_factory.h  task_properties.cc  task_properties.h
src/search/tasks/: domain_abstracted_task_factory.cc  modified_init_goals_task.cc  modified_init_goals_task.h  partial_state_wrapper_task.cc  root_task.cc
src/search/utils/: distribution.cc  distribution.h  exceptions.h  logging.h  memory.cc  memory.h  rng.cc  rng.h  system.cc  system.h  system_unix.cc  timer.cc  timer.h
testing/: test.py
(+169 files in other folders)
